GL/Projet_GL/src/test/deca/syntax/invalid/sansObjet/fichier_3.decah
#include "fichier_1.decah"

{
    
}